<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bakery</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_info">Information</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Log in</string>
    <string name="info_describe">Mon:\nTue:\nWed:\nThu:\nFri:\nSat:\nSun:\n</string>
    <string name="info_schedule_describe">7:30 - 19:00\n7:30 - 19:00\n7:30 - 19:00\n7:30 - 19:00\n7:30 - 19:00\n10:00 - 17:00\n10:00 - 17:00</string>
    <string name="info_phone"> Julia:\t(613)-287-2334\nMiao: \t\t(613)-232-5768
    </string>
    <string name="macaron_describe">a French sweet meringue-based confection</string>
    <string name="mousecake_descbrie">With three shades of chocolate</string>
    <string name="cupcake_describe">cupcake with pumpkin flavour</string>
    <string name="pudding_describe">Coconut Rice Puddings with Raspberries</string>
</resources>
