<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f1e8df"
    tools:context="com.example.keai.bake.InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/infoimg"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="OPEN TIME"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_describe"
        android:textSize="18sp"
        android:textStyle="normal"
        android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_schedule_describe"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="PHONE"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_phone"
        android:textSize="18sp"
        android:textStyle="normal"
        android:paddingLeft="10dp"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true">
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/facebook"
        android:src="@drawable/icon_facebook"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/pinterest"
        android:onClick="link_facebook"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/pinterest"
        android:src="@drawable/icon_pinterest"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/twitter"
        android:onClick="link_pinterest"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/twitter"
        android:src="@drawable/icon_twitter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="link_twitter"/>
    </RelativeLayout>


    </LinearLayout>


</ScrollView>
